some work on us_contagious_diseases

--- a/02-student_instructions.Rmd
+++ b/02-student_instructions.Rmd
@@ -85,6 +85,17 @@ cow::borrow_chapter(
 )
 ```
 
+To start, you will need to load the `dslabs` package, which contains the dataset.  Type the following commands to load the package and confirm that you can view the dataset.  You should see a printout of the first few rows of data, as shown below.
+
+    ```{r}
+    library(dslabs)
+    head(us_contagious_diseases)
+    ```
+ 
+:::{.notice}
+It can be a bit annoying to have to type out the whole dataset name, and it's easy to make errors.  Remember that you can use "tab completion" to make the computer do the work for you!  Start typing the first few letters (i.e. `us`), then hit the `TAB` key on your keyboard and you should see a list of autocomplete possibilities.  Use your mouse or the arrow keys to select the one you want, or just keep typing until it's the only one left, then hit `ENTER` and it will autocomplete for you.
+:::
+
 # Wrap-up
 
 Cloud computing costs are based on the amount of time you use the computing resources, so it's important to clean up after yourself when you're done, and not just leave the computers running.
