--- a/02-student_instructions.Rmd
+++ b/02-student_instructions.Rmd
@@ -135,7 +135,12 @@ Using this new, filtered dataframe, find the average case count:
 - Copy the above command, and run it in RStudio.
 - Then use an R command to find the average of the `count` column in the `hepatitis_md` dataframe.
 
-**Q6.** Modify the above command to select for Polio cases in California, and find the average count.
+**Q6.** Modify the above command to select for Polio cases in Vermont, and find the average count.
+
+- Remember that you can use the up arrow to cycle through previous commands and can then modify and run them.
+- Tap the up arrow until you get back to the command that extracted the data for Hepatitis A in Maryland.
+- Modify the command to select for Polio in Vermont.
+- Don't forget to store this data using a different name!  It would be confusing to have the Vermont Polio data stored in an object named `hepatitis_md`.
 :::
 
 # Wrap-up
