--- a/02-student_instructions.Rmd
+++ b/02-student_instructions.Rmd
@@ -137,8 +137,7 @@ Using this new, filtered dataframe, find the average case count:
 
 **Q6.** Modify the above command to select for Polio cases in Vermont, and find the average count.
 
-- Remember that you can use the up arrow to cycle through previous commands and can then modify and run them.
-- Tap the up arrow until you get back to the command that extracted the data for Hepatitis A in Maryland.
+- Remember that you can use the up arrow to cycle through previous commands. Tap the up arrow until you get back to the command that extracted the data for Hepatitis A in Maryland.
 - Modify the command to select for Polio in Vermont.
 - Don't forget to store this data using a different name!  It would be confusing to have the Vermont Polio data stored in an object named `hepatitis_md`.
 :::
