--- a/index.Rmd
+++ b/index.Rmd
@@ -40,23 +40,12 @@ _Programming skills_
 
 This activity addresses the following core concepts and competencies, as described by the associated societies and working groups:
 
-### Vision and Change {-}
-
-From the [Vision and Change in Undergraduate Biology Education](https://visionandchange.org/) AAAS report
-
-Core Competencies:
-
-- Ability to use quantitative reasoning
-- Ability to tap into the interdisciplinary nature of science
-
-### Bioinformatics Core Competencies {-}
-
-From [Bioinformatics core competencies for undergraduate life sciences education](https://doi.org/10.1371/journal.pone.0196878) by [NIBLSE](https://qubeshub.org/community/groups/niblse)
-
-- Use command-line bioinformatics tools and write simple computer scripts
+  - **Vision and Change**: [Vision and Change in Undergraduate Biology Education](https://visionandchange.org/) AAAS report
+  - **Genetics**:
+  - **Bioinformatics: [Bioinformatics core competencies for undergraduate life sciences education](https://doi.org/10.1371/journal.pone.0196878) by [NIBLSE](https://qubeshub.org/community/groups/niblse)
 
 
-```{r}
+```{r, echo=FALSE}
 competencies <- tibble::tribble(
   ~source, ~competencies,
   
