--- a/index.Rmd
+++ b/index.Rmd
@@ -40,19 +40,18 @@ _Programming skills_
 
 This activity addresses the following core concepts and competencies, as described by the associated societies and working groups:
 
-  - **Vision and Change**: [Vision and Change in Undergraduate Biology Education](https://visionandchange.org/) AAAS report
-  - **Genetics**:
-  - **Bioinformatics: [Bioinformatics core competencies for undergraduate life sciences education](https://doi.org/10.1371/journal.pone.0196878) by [NIBLSE](https://qubeshub.org/community/groups/niblse)
-
-
 ```{r, echo=FALSE}
 competencies <- tibble::tribble(
   ~source, ~competencies,
   
   "**Vision and Change**",  paste(
                               "Core Competencies\n",
+                              # "- Ability to apply the process of science",
                               "- Ability to use quantitative reasoning",
+                              # "- Ability to use modeling and simulation",
                               "- Ability to tap into the interdisciplinary nature of science",
+                              # "- Ability to communicate and collaborate with other disciplines",
+                              # "- Ability to understand the relationship between science and society",
                             sep="\n"),
 
 
@@ -67,6 +66,10 @@ competencies <- tibble::tribble(
 
 knitr::kable(competencies, col.names = NULL, format = "html")
 ```
+
+  - **Vision and Change**: [Vision and Change in Undergraduate Biology Education](https://visionandchange.org/) AAAS report
+  - **Genetics**:
+  - **Bioinformatics: [Bioinformatics core competencies for undergraduate life sciences education](https://doi.org/10.1371/journal.pone.0196878) by [NIBLSE](https://qubeshub.org/community/groups/niblse)
 
 ## GDSCN Collection {-}
 
