--- a/index.Rmd
+++ b/index.Rmd
@@ -77,9 +77,9 @@ knitr::kable(competencies, col.names = NULL, format = "html")
 
 Core concepts and competencies are described in the following publications:
 
-  - **Vision and Change**: [Vision and Change in Undergraduate Biology Education](https://visionandchange.org/) AAAS report
-  - **Genetics**:
-  - **Bioinformatics**: [Bioinformatics core competencies for undergraduate life sciences education](https://doi.org/10.1371/journal.pone.0196878) by [NIBLSE](https://qubeshub.org/community/groups/niblse)
+  - [Vision and Change in Undergraduate Biology Education](https://visionandchange.org/) AAAS report
+  - Genetics
+  - [Bioinformatics core competencies for undergraduate life sciences education](https://doi.org/10.1371/journal.pone.0196878) by [NIBLSE](https://qubeshub.org/community/groups/niblse)
 
 ## GDSCN Collection {-}
 
