add genetics link

--- a/index.Rmd
+++ b/index.Rmd
@@ -78,7 +78,7 @@ knitr::kable(competencies, col.names = NULL, format = "html")
 Core concepts and competencies are described in the following publications:
 
   - [Vision and Change in Undergraduate Biology Education](https://visionandchange.org/) AAAS report
-  - Genetics
+  - [Genetics Core Competencies](https://genetics-gsa.org/education/genetics-learning-framework/) by [GSA](https://genetics-gsa.org/)
   - [Bioinformatics core competencies for undergraduate life sciences education](https://doi.org/10.1371/journal.pone.0196878) by [NIBLSE](https://qubeshub.org/community/groups/niblse)
 
 ## GDSCN Collection {-}
